// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Section should accept anchor 1`] = `
<div>
  <div
    class="dark"
  >
    <div
      class="className bg-dark-2 dark:bg-dark-dark-2 text-primary dark:text-dark-primary text-c3 lg:text-c4"
    >
      <div
        data-testid="container"
      >
        <section>
          <h2
            class="leading-none text-c9 sm:text-c10 lg:text-c11 text-accent-1 dark:text-dark-accent-1 drop-shadow mt-[164px] "
            id="TestId"
          >
            Test Title
          </h2>
        </section>
      </div>
    </div>
  </div>
</div>
`;

exports[`Section should accept className 1`] = `
<div>
  <div
    class="dark"
  >
    <div
      class="className bg-dark-2 dark:bg-dark-dark-2 text-primary dark:text-dark-primary text-c3 lg:text-c4"
    >
      <div
        data-testid="container"
      >
        <section
          class="test"
        >
          <h2
            class="leading-none text-c9 sm:text-c10 lg:text-c11 text-accent-1 dark:text-dark-accent-1 drop-shadow mt-[164px] "
            id=""
          >
            Test Title
          </h2>
        </section>
      </div>
    </div>
  </div>
</div>
`;

exports[`Section should render children 1`] = `
<div>
  <div
    class="dark"
  >
    <div
      class="className bg-dark-2 dark:bg-dark-dark-2 text-primary dark:text-dark-primary text-c3 lg:text-c4"
    >
      <div
        data-testid="container"
      >
        <section>
          <h2
            class="leading-none text-c9 sm:text-c10 lg:text-c11 text-accent-1 dark:text-dark-accent-1 drop-shadow mt-[164px] "
            id=""
          >
            Test Title
          </h2>
          <span>
            Children
          </span>
        </section>
      </div>
    </div>
  </div>
</div>
`;

exports[`Section should render section 1`] = `
<div>
  <div
    class="dark"
  >
    <div
      class="className bg-dark-2 dark:bg-dark-dark-2 text-primary dark:text-dark-primary text-c3 lg:text-c4"
    >
      <div
        data-testid="container"
      >
        <section>
          <h2
            class="leading-none text-c9 sm:text-c10 lg:text-c11 text-accent-1 dark:text-dark-accent-1 drop-shadow mt-[164px] "
            id=""
          >
            Test Title
          </h2>
        </section>
      </div>
    </div>
  </div>
</div>
`;
